# Rcs

./: README.md
cmake/: CMakeLists-theo.txt  Externals.cmake
config/xml/DexBot/: TwoArmLBR.xml  cAction_Kin.xml  gScenario_Kin.xml
config/xml/GenericHumanoid/: cAction-Box.xml  gScenario.xml  robot-leftArm.xml  robot-rightArm.xml
projects/HybridPlanner/: CMakeLists.txt
projects/HybridPlanner/demos/Avatar/: Avatar_Kin.cpp
projects/HybridPlanner/demos/DexBot/: DexBot_Kin.cpp
